kmjsniper/templates/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmjsniper-api
spec:
  type: ClusterIP
  selector:
    app: kmjsniper-api
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 6969
