kmjsniper/templates/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: kmjsniper-client
spec:
  type: ClusterIP
  selector:
    app: kmjsniper-client
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 3000
