kmjsniper/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kmjsniper
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:673692536255:certificate/8d6c5d34-2b0c-4f47-99c4-095cd3c78405
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: shared-lb
    alb.ingress.kubernetes.io/group.order: '5'
    alb.ingress.kubernetes.io/subnets: subnet-0b0c0dc90226cf19a, subnet-020bf374dd5227595
spec:
  ingressClassName: alb
  rules:
    - host: kmjsniper.juliusoh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kmjsniper-client
                port:
                  number: 80
    - host: kmjsniper-api.juliusoh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kmjsniper-api
                port:
                  number: 80
